--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -51,7 +51,7 @@ $hr-border-width:             $border-width;
 // Colors
 //
 
-$text-color:       rgba(248, 248, 242, 0.9) !default;
+$text-color:       rgba(248, 248, 242, .95) !default;
 $background-color: #282a36;
 
 $white:            #f8f8f2;
