--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
     </header>
 
     <article class="page-content">
-      {{ content }}
+      {% include anchor_headings.html html=content anchorBody="⚓" anchorClass="anchor" %}
     </article>
 
 
