--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col s12 m9">
       <div class="post-listing">
-        {% include anchor_headings.html html=content anchorClass="anchor"%}
+        {{ content }}
         {% include footer.html %}
       </div>
     </div>
