--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -11,7 +11,8 @@ pre, code {
   font-size: ($font-size-base - 2);
 }
 code {
-  color: #8be9fd;
+  color: #f8f8f2;
+  padding: .2em;
   border-radius: 2px;
   white-space: nowrap;
 }
