Add search bar and authors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,4 +53,26 @@
   <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
   <!-- 32x32 -->
   <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+
+  <!-- Search bar -->
+  <style>
+      #search-container {
+        background: #282a36;
+        margin: 1em auto;
+        outline-color: #282a36;
+        border: 1px solid #282a36;
+      }
+      #search-input {
+        display: inline-block;
+        background: #282a36;
+        padding: 1em;
+        width: 100%;
+        font-size: 0.8em;
+        color: #6272a4;
+        border-width: 0px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+  </style>
 </head>
