--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,14 @@ layout: default
     <h1 title="{{ page.title | escape }}">{{ page.title }}</h1>
     <span class="post-meta">
       <span class="post-date">
-        {{ page.date | date: "%-d %b %Y" | upcase }}
+        {{ page.date | date: "%-b %d %Y" | upcase }}
       </span>
+      {% if page.author %}
+        •
+      <span class="post-author">
+        {{ site.data.authors[page.author].name }}
+      </span>
+      {% endif %}
       •
       {% include read_time.html %}
     </span>
