--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    &copy; {{ date: '%Y' }} {{ site.owner.name }} Powered by <a href="http://jekyllrb.com/">Jekyll</a>, Based on <a href="http://github.com/renyuanz/leonids/">leonids theme</a>.<br>This site includes my personal thoughts and work; <font color="#ff5555">the opinions expressed here are my own</font> and not those of my employer.
+    &copy; {{ date: '%Y' }} {{ site.owner.name }} Powered by <a href="http://jekyllrb.com/">Jekyll</a>, Based on <a href="http://github.com/renyuanz/leonids/">leonids theme</a>. <div>Some icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><br>This site includes my personal thoughts and work; <font color="#ff5555">the opinions expressed here are my own</font> and not those of my employer.
 </footer>
