--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -7,9 +7,8 @@ pre, code {
   font-family: $font-family-monospace;
   //color: #6272a4;
   color: #f8f8f2;
-  font-size: 0.9em;
   background-color: #282a36;
-  font-size: ($font-size-base - 2);
+  font-size: ($font-size-base + .15);
 }
 code {
   color: #f8f8f2;
